# otus-cpp-basics_lesson_05

./: .gitignore  CMakeLists.txt
saved_scores/: high_scores.txt
src/: CMakeLists.txt  guess_the_number.cpp
src/check_args/: check_args.cpp  check_args.h
src/check_value/: check_value.cpp  check_value.h
src/table_scores/: table_score.cpp  table_score.h
